app/assets/stylesheets/dmpopidor.scss
/* ... */
  
/*
  Research Outputs
*/
.nav-tabs {
    li.disabled {
        cursor: not-allowed;
        a {
        pointer-events: none;
        }
    }
}

#research-outputs {
    width: 100%;
    padding: 0 5px;
    margin-top: 5px;
    .form-group {
        margin: 0;
        margin-right: 5px;
    }

    .research-output-element {
        display: flex;
        margin: 5px 0;

        .research-output-fields {
            flex: 9;
            border: 0.5px groove $color-border-light;
            box-shadow:  0px 0px 0px 0px $color-shadow-dark;
            padding: 5px;
            .research-output-pid, .research-output-type {
                width: 30%;
            }
        }
        .research-output-actions {
            flex: 1;
            display: flex;
            align-items: center;
            justify-content: center;
            color: $blue;

            .handle, .edit, .cancel {
                cursor: pointer;
            }
            a {
                color: $blue;
            }
        }
    }
}


#show-research-outputs {
    display: flex;
    flex-direction: column;
    .research-output-element {
        margin: 5px 0;
        padding: 5px;

        border: 0.5px groove $color-border-light;
        box-shadow:  0px 0px 0px 0px $color-shadow-dark;
        .research-output-value {
            display: flex;
            strong {
                flex: 2;
                text-align: right;
            }
            span {
                padding-left: 20px;
                flex: 8;
            }
        }
    }
}

/*
 * ACCESSIBILITY
 */

 a.has-new-window-popup-info,
button.has-new-window-popup-info {
  &:hover,
  &:focus,
  &:active {

    & > span.new-window-popup-info {
      width:15em;
      border:1px solid $blue;
      background-color: white;
      color:$blue;
    }
    
  }
  
}

